--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
-    <link rel="shortcut icon" href="./favicon.ico" type="icon">
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -163,6 +163,7 @@
             </div>
         </div>
     </footer>
+    <script>alert("© 2023 Netflix Clone.")</script>
 </body>
 
 </html>
